@@ -5,6 +5,9 @@
 VERSION 6.5.38, distributed with SWI-Prolog 5.5.38
 ==================================================
 
+* PORT: Windows: Work around MSVC6 bug in `string->insert_character'.
+  Jelmer Jellema.
+
 * ADDED: Emacs buffer menu: kill selected buffer on DEL and backspace keys.
 
 * ENHANCED: cleanup ENC_WCHAR issues.  Use new encoding API to protect
